2006-07-26  John W. Eaton  <jwe@octave.org>

	* file-io.cc (Ffeof, Fferror): Use DEFUNX instead of DEFUN.

	* mex.cc (xfree): New function.
	(mex::free): Use it.
	(mxArray_struct::~mxArray_struct, mxArray_cell::~mxArray_cell):
	Delete elements with delete, not mxDestroyArray.
	(mex::cleanup): Don't call mex::free or mex::free_value.
	(mex::free_value): Add debug warning.
	(mex::mark, mex::unmark): Fix debug warning.
	(call_mex): Use unwind_protect frame.
	(mexUnlock): Use iterator to remove item from mex_lock_count.

	* octave.cc (maximum_braindamage): Use disable_warning instead of
	bind_internal_variable to disable function-name-clash warning.
	* error.cc (disable_warning): No longer static.
	* error.h: Provide decl.

2006-07-25  David Bateman  <dbateman@free.fr>

	* mex.cc (mxArray_octave_value::get_class_id): Handle sparse.
	(class mxArray_sparse): Derive from mxArray_matlab, not
	mxArray_number.
	(mxArray_sparse::as_octave_value): Implement function.
	* ov-bool-sparse.cc (octave_sparse_bool_matrix::as_mxArray):
	Implement function.
	* ov-cx-sparse.cc (octave_sparse_complex_matrix::as_mxArray):
	Implement function.	
	* ov-re-sparse.cc (octave_sparse_matrix::as_mxArray):
	Implement function.

2006-07-25  John W. Eaton  <jwe@octave.org>

	* mex.cc (mxArray_struct::as_octave_value, call_mex,
	mexCallMATLAB, mxArray_cell::as_octave_value):
	Convert NULL mxArray* pointers to empty matrix values.
	(mxArray_octave_value:get_ir): Fix typo.

2006-07-22  John W. Eaton  <jwe@octave.org>

	* mxarray.h: New file.
	* mex.h, mexproto.h, mex.cc: New implementation of mxArray and MEX
	interface.

	* ov.h (octave_value::mex_get_ir, octave_value::mex_get_jc):
	New functions.
	* ov-base.h (octave_base_value::mex_get_ir,
	octave_base_value::mex_get_jc): New virtual functions.
	* ov-base-sparse.h (octave_base_sparse<T>::mex_get_ir,
	octave_base_sparse<T>::mex_get_jc): New functions.

	* ov-intx.h (OCTAVE_VALUE_INT_SCALAR_T::as_mxArray,